--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,18 @@
 
 <body>
   <header>
-    <h1>The Tech Blog</h1>
+    <div>
+      <h1>The Tech Blog</h1>
+    </div>
+    <div>
+      <nav class="nav">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+</nav>
+    </div>
+
   </header>
 
   <main>
