--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,24 +13,40 @@
   <header>
     <div>
       <h1>The Tech Blog</h1>
+      {{#if logged_in}}
+        <h3>Welcome back</h3>
+      {{/if}}
     </div>
     <div>
       <nav class="nav">
         <a class="nav-link" href="#">Home</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-</nav>
+        {{#if logged_in}}
+          <a class="nav-link" href="#">DashBoard</a>
+          <button type="button" class="btn btn-link nav-link" id="logout">Logout</button>
+        {{else}}
+          <a class="nav-link" href="#">Login</a>
+        {{/if}}
+      </nav>
     </div>
-
   </header>
 
   <main>
+    {{#if logged_in}}
     {{{body}}}
+    {{else}}
+    <div>
+      <p>Log in to see content</p>
+    </div>
+    {{/if}}
   </main>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+  {{/if}}
+
 </body>
 
 </html>
