--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
@@ -14,30 +14,24 @@
     <div>
       <h1>The Tech Blog</h1>
       {{#if logged_in}}
-        <h3>Welcome back</h3>
+        <h3>Welcome back {{logged_in_username}}</h3>
       {{/if}}
     </div>
     <div>
       <nav class="nav">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="/">Home</a>
         {{#if logged_in}}
-          <a class="nav-link" href="#">DashBoard</a>
+          <a class="nav-link" href="/">DashBoard</a>
           <button type="button" class="btn btn-link nav-link" id="logout">Logout</button>
         {{else}}
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="/login">Login</a>
         {{/if}}
       </nav>
     </div>
   </header>
 
   <main>
-    {{#if logged_in}}
     {{{body}}}
-    {{else}}
-    <div>
-      <p>Log in to see content</p>
-    </div>
-    {{/if}}
   </main>
 
 
