--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,21 @@
-<div class="d-flex flex-row justify-content-md-between">
-  {{!-- Login Form --}}
-  <div class="login-card">
-    <h2>Login</h2>
+{{!-- Login Form --}}
+<div class="login-card">
+  <h2>Login</h2>
 
-    <form class="login-form">
-      <div class="form-group">
-        <label for="usernameLogin">Username</label>
-        <input type="text" class="form-control" id="usernameLogin" placeholder="Enter Username">
-      </div>
-      <div class="form-group">
-        <label for="passwordLogin">Password</label>
-        <input type="password" class="form-control" id="passwordLogin" placeholder="Enter Password">
-      </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
-
-  {{!-- Sign Up Form --}}
-  <div class="login-card">
-    <h2>Sign Up</h2>
-
-    <form class="signup-form">
-      <div class="form-group">
-        <label for="usernameSignup">Username</label>
-        <input type="text" class="form-control" id="usernameSignup" placeholder="Enter Username">
-      </div>
-      <div class="form-group">
-        <label for="emailSignup">Email</label>
-        <input type="text" class="form-control" id="emailSignup" placeholder="Enter Email">
-      </div>
-      <div class="form-group">
-        <label for="passwordSignup">Password</label>
-        <input type="password" class="form-control" id="passwordSignup" placeholder="Enter Password">
-      </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
+  <form class="login-form">
+    <div class="form-group">
+      <label for="usernameLogin">Username</label>
+      <input type="text" class="form-control" id="usernameLogin" placeholder="Enter Username">
+    </div>
+    <div class="form-group">
+      <label for="passwordLogin">Password</label>
+      <input type="password" class="form-control" id="passwordLogin" placeholder="Enter Password">
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="button" class="btn btn-link" id="sign-up-button">Sign Up Instead</button>
+    </div>
+  </form>
 </div>
 
 <script src="/js/login.js"></script>
-<script src="/js/signup.js"></script>
