--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
       <nav class="nav">
         <a class="nav-link" href="/">Home</a>
         {{#if logged_in}}
-          <a class="nav-link" href="/">DashBoard</a>
+          <a class="nav-link" href="/dashboard">DashBoard</a>
           <button type="button" class="btn btn-link nav-link" id="logout">Logout</button>
         {{else}}
           <a class="nav-link" href="/login">Login</a>
