can how add posts and view users own posts

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,5 +5,7 @@
 {{/if}}
 
 <div>
-  <button type="button" class="btn btn-primary">Create a New Post</button>
+  <button type="button" class="btn btn-primary" id="add-post-button">Create a New Post</button>
 </div>
+
+<script src="/js/dashboard.js"></script>
