--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 {{!-- Sign Up Form --}}
-<div class="login-card">
+<div class="signup-card">
   <h2>Sign Up</h2>
 
   <form class="signup-form">
@@ -16,6 +16,7 @@
       <input type="password" class="form-control" id="passwordSignup" placeholder="Enter Password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+    <a href="/login">Login</a>
   </form>
 </div>
 
