--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,5 @@
-{{#each users as |user|}}
-  <div class="card">
-    <div class="card-body">
-      <h2 class="card-title">{{user.name}}</h2>
-      <h3 class="card-subtitle mb-2 text=body=secondary">{{user.email}}</h3>
-      <p class="card-text">Blog Post Placeholder</p>
-    </div>
-  </div>
+{{#if posts}}
+{{#each posts as |post|}}
+{{> blogposts}}
 {{/each}}
+{{/if}}
