--- a/views/partials/blogposts.handlebars
+++ b/views/partials/blogposts.handlebars
@@ -5,5 +5,6 @@
   </div>
   <div class="card-body">
     <p>{{content}}</p>
+    <a href="/post/{{id}}" class="stretched-link"></a>
   </div>
 </div>
