comments now can be seen on the post's page

--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -8,6 +8,12 @@
   </div>
 </div>
 
+{{#if post.comments}}
+{{#each post.comments as |comment|}}
+{{> comments}}
+{{/each}}
+{{/if}}
+
 <div class="addcomment-card">
   <form class="addcomment-form">
     <div class="form-group">
