--- a/views/partials/blogposts.handlebars
+++ b/views/partials/blogposts.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header">
     <div class="float-start">{{title}}</div>
-    <div class="float-end">Posted By {{user.name}} on {{format_date date_created}}</div>
+    <div class="float-end">Posted By {{user.name}} on {{format_date updatedAt}}</div>
   </div>
   <div class="card-body">
     <p>{{content}}</p>
