--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -3,6 +3,6 @@
   </div>
   <div class="card-body">
     <p>{{content}}</p>
-    <p>- {{user.name}} on {{format_date date_created}}</p>
+    <p>- {{user.name}} on {{format_date updatedAt}}</p>
   </div>
 </div>
