--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,28 +1,35 @@
 {{!-- the post --}}
-<div class="card" data-id="{{post.id}}" id="post-card">
-  <div class="card-header">
-    <div class="float-start">{{post.title}}</div>
-    <div class="float-end">Posted By {{post.user.name}} on {{format_date post.updatedAt}}</div>
-  </div>
-  <div class="card-body">
-    <p>{{post.content}}</p>
+<div class="d-block p-2">
+  <div class="card" data-id="{{post.id}}" id="post-card">
+    <div class="card-header">
+      <h5 class="float-start mt-1">{{post.title}}</h5>
+      <p class="float-end">Posted By {{post.user.name}} on {{format_date post.updatedAt}}</p>
+    </div>
+    <div class="card-body">
+      <p>{{post.content}}</p>
+    </div>
   </div>
 </div>
 
+
 {{!-- update button and update form --}}
-<div class="d-none" data-id="{{logged_in_username}}" id="buttons-div">
-  <button type="button" data-id="{{post.user.name}}" class="btn btn-info d-none" id="update-button">Update Post</button>
-  <div class="updatepost-card d-none" id="updatepost-card">
-  <form class="updatepost-form">
-    <div class="form-group">
-      <label for="update-content">Update Your Post</label>
-      <textarea class="form-control" id="update-content" rows="4"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <button type="button" class="btn btn-danger" id="close-update">Close</button>
-  </form>
+<div class="p-2">
+  <div class="d-none" data-id="{{logged_in_username}}" id="buttons-div">
+    <button type="button" data-id="{{post.user.name}}" class="btn btn-info d-none float-start mt-1" id="update-button">Update Post</button>
+    <button type="button" class="btn btn-danger d-none float-end mt-1" id="delete-post">Delete Post</button>
+  </div>
+  <div class="updatepost-card d-none mt-5" id="updatepost-card">
+    <form class="updatepost-form">
+      <div class="form-group">
+        <label for="update-content">Update Your Post</label>
+        <textarea class="form-control" id="update-content" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary mt-1 float-start">Submit</button>
+      <button type="button" class="btn btn-danger mt-1 float-end" id="close-update">Close</button>
+    </form>
+  </div>
 </div>
-</div>
+
 
 {{!-- comment cards if there are any --}}
 {{#if post.comments}}
@@ -32,14 +39,17 @@
 {{/if}}
 
 {{!-- comment form --}}
-<div class="addcomment-card">
-  <form class="addcomment-form">
-    <div class="form-group">
-      <label for="comment-content">Add a Comment</label>
-      <textarea class="form-control" id="comment-content" rows="4"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+<div class="d-block mt-5 p-2">
+  <div class="addcomment-card">
+    <form class="addcomment-form">
+      <div class="form-group">
+        <label for="comment-content">Add a Comment</label>
+        <textarea class="form-control" id="comment-content" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary mt-1">Submit</button>
+    </form>
+  </div>
 </div>
+
 
 <script src="/js/createComment.js"></script>
