--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,23 +1,26 @@
 {{!-- Sign Up Form --}}
-<div class="signup-card">
-  <h2>Sign Up</h2>
+<div class="d-flex p-2 justify-content-center mt-3">
+  <div class="signup-card w-50">
+    <h2 class="text-center">Sign Up</h2>
 
-  <form class="signup-form">
-    <div class="form-group">
-      <label for="usernameSignup">Username</label>
-      <input type="text" class="form-control" id="usernameSignup" placeholder="Enter Username">
-    </div>
-    <div class="form-group">
-      <label for="emailSignup">Email</label>
-      <input type="text" class="form-control" id="emailSignup" placeholder="Enter Email">
-    </div>
-    <div class="form-group">
-      <label for="passwordSignup">Password</label>
-      <input type="password" class="form-control" id="passwordSignup" placeholder="Enter Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <a href="/login">Login</a>
-  </form>
+    <form class="signup-form">
+      <div class="form-group mb-2">
+        <label for="usernameSignup" class="mb-1">Username</label>
+        <input type="text" class="form-control" id="usernameSignup" placeholder="Enter Username">
+      </div>
+      <div class="form-group mb-2">
+        <label for="emailSignup" class="mb-1">Email</label>
+        <input type="text" class="form-control" id="emailSignup" placeholder="Enter Email">
+      </div>
+      <div class="form-group mb-2">
+        <label for="passwordSignup" class="mb-1">Password</label>
+        <input type="password" class="form-control" id="passwordSignup" placeholder="Enter Password">
+      </div>
+      <button type="submit" class="btn btn-primary float-start">Submit</button>
+      <a href="/login" class="float-end">Login</a>
+    </form>
+  </div>
 </div>
+
 
 <script src="/js/signup.js"></script>
