--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -1,18 +1,22 @@
 {{!-- Add a New Post Form --}}
-<div class="addpost-card">
-  <h2>Write a New Blog Post</h2>
+<div class="d-flex justify-content-center mt-5">
+  <div class="addpost-card w-75">
+    <h2 class="text-center">Write a New Blog Post</h2>
 
-  <form class="addpost-form">
-    <div class="form-group">
-      <label for="post-title">Post Title</label>
-      <input type="text" class="form-control" id="post-title" placeholder="Enter Blog Post Title">
-    </div>
-    <div class="form-group">
-      <label for="post-content">What's On Your Mind?</label>
-      <textarea class="form-control" id="post-content" rows="4"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    <form class="addpost-form">
+      <div class="form-group">
+        <label for="post-title" class="fs-5 mb-1">Post Title</label>
+        <input type="text" class="form-control" id="post-title" placeholder="Enter Blog Post Title">
+      </div>
+      <div class="form-group">
+        <label for="post-content" class="fs-5 mb-1 mt-2">What's On Your Mind?</label>
+        <textarea class="form-control mb-2" id="post-content" rows="6"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary float-start">Submit</button>
+      <button type="button" class="btn btn-danger float-end" id="post-back-button">Back</button>
+    </form>
+  </div>
 </div>
+
 
 <script src="/js/createPost.js"></script>
