--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,6 +1,6 @@
 {{!-- the post --}}
 <div class="d-block p-2">
-  <div class="card" data-id="{{post.id}}" id="post-card">
+  <div class="card shadow p-0 mb-2 bg-body-tertiary rounded" data-id="{{post.id}}" id="post-card">
     <div class="card-header">
       <h5 class="float-start mt-1">{{post.title}}</h5>
       <p class="float-end">Posted By {{post.user.name}} on {{format_date post.updatedAt}}</p>
@@ -21,7 +21,7 @@
   <div class="updatepost-card d-none mt-5" id="updatepost-card">
     <form class="updatepost-form">
       <div class="form-group">
-        <label for="update-content">Update Your Post</label>
+        <label for="update-content" class="fs-5">Update Your Post</label>
         <textarea class="form-control" id="update-content" rows="3"></textarea>
       </div>
       <button type="submit" class="btn btn-primary mt-1 float-start">Submit</button>
@@ -43,7 +43,7 @@
   <div class="addcomment-card">
     <form class="addcomment-form">
       <div class="form-group">
-        <label for="comment-content">Add a Comment</label>
+        <label for="comment-content" class="mb-1 fs-5">Add a Comment</label>
         <textarea class="form-control" id="comment-content" rows="3"></textarea>
       </div>
       <button type="submit" class="btn btn-primary mt-1">Submit</button>
