--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,14 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <header>
     <div>
-      <h1>The Tech Blog</h1>
+      <h1 class="p-3 mb-3 font-monospace">The Tech Blog</h1>
       {{#if logged_in}}
-        <h3>Welcome back {{logged_in_username}}</h3>
+        <h3 class="ms-4 font-monospace" id="welcome-header">Welcome back {{logged_in_username}}</h3>
       {{/if}}
     </div>
     <div>
