--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,6 +1,8 @@
-<div class="card shadow-sm p-0 mb-2 bg-body-tertiary rounded">
-  <div class="card-body">
-    <p>{{content}}</p>
-    <p class="float-end">- {{user.name}} on {{format_date updatedAt}}</p>
+<div class="d-block">
+  <div class="card shadow-sm p-0 mb-2 bg-body-tertiary rounded">
+    <div class="card-body">
+      <p>{{content}}</p>
+      <p class="float-end">- {{user.name}} on {{format_date updatedAt}}</p>
+    </div>
   </div>
 </div>
